@@ -1,4 +1,4 @@
-@set UPDATED 22 March 2008
-@set UPDATED-MONTH March 2008
+@set UPDATED 13 April 2008
+@set UPDATED-MONTH April 2008
 @set EDITION 2.3.0
 @set VERSION 2.3.0
